[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/gui/speech_white.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/SpeechFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/screen_levelselect/LevelWidget.gd" type="Script" id=3]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.478431, 0.109804, 0.294118, 1 )
thickness = 3

[node name="LevelWidget" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -395.0
margin_bottom = -235.0
rect_min_size = Vector2( 85, 85 )
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NineRect" type="NinePatchRect" parent="."]
margin_right = 85.0
margin_bottom = 85.0
rect_min_size = Vector2( 75, 75 )
mouse_filter = 1
texture = ExtResource( 1 )
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="NineRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NineRect/MarginContainer"]
margin_right = 75.0
margin_bottom = 75.0

[node name="Title" type="Label" parent="NineRect/MarginContainer/VBoxContainer"]
margin_right = 75.0
margin_bottom = 13.0
mouse_filter = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.105882, 0.0117647, 0.14902, 1 )
text = "Intro"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="NineRect/MarginContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 75.0
margin_bottom = 21.0
mouse_filter = 1
custom_styles/separator = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="NineRect/MarginContainer/VBoxContainer"]
visible = false
margin_top = 25.0
margin_right = 65.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="NineRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 26.0
margin_bottom = 13.0
mouse_filter = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.105882, 0.0117647, 0.14902, 1 )
text = "Time:"

[node name="Time" type="Label" parent="NineRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 30.0
margin_right = 65.0
margin_bottom = 13.0
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.105882, 0.0117647, 0.14902, 1 )
text = "01:56"
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="NineRect/MarginContainer/VBoxContainer"]
visible = false
margin_top = 25.0
margin_right = 65.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="NineRect/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 33.0
margin_bottom = 13.0
mouse_filter = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.105882, 0.0117647, 0.14902, 1 )
text = "Score:"

[node name="Score" type="Label" parent="NineRect/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 37.0
margin_right = 65.0
margin_bottom = 13.0
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.105882, 0.0117647, 0.14902, 1 )
text = "13"
align = 2

[node name="Tween" type="Tween" parent="."]
[connection signal="mouse_entered" from="NineRect" to="." method="_on_NineRect_mouse_entered"]
[connection signal="mouse_exited" from="NineRect" to="." method="_on_NineRect_mouse_exited"]
